--- a/elm/src/main.css
+++ b/elm/src/main.css
@@ -4,9 +4,24 @@
 }
 
 body {
-    font-family: 'Source Sans Pro', 'Trebuchet MS', 'Lucida Grande', 'Bitstream Vera Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', Helvetica, Arial, sans-serif;
     margin: 0;
     color: #293c4b;
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+}
+
+.wichteln-create {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    overflow-y: auto;
+}
+
+.wichteln-create .wrapper {
+    max-width: 600px;
 }
 
 h1 {
@@ -167,4 +182,193 @@ ul.participants.enter>li {
     top: 99%;
     backface-visibility: hidden;
     transition: opacity var(--dot-anim) ease;
+}
+
+
+/** styles for the lamp */
+
+.lamp * {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-tap-highlight-color: transparent;
+}
+
+.wrapper.lamp {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #006633ff;
+    user-select: none;
+}
+
+.wrapper.lamp .shine {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle closest-corner at 50% 40%, #fcea10 0, transparent 100%);
+    background: radial-gradient(circle closest-corner at 50% calc(50% - 100px), #fcea10 0, transparent 100%);
+    transition: opacity 0.4s;
+    opacity: 0;
+    z-index: 0;
+}
+
+.wrapper.lamp.active .shine {
+    opacity: 1;
+}
+
+.wrapper.lamp svg {
+    position: relative;
+    cursor: pointer;
+    /* Pointer API problems in Safari */
+    touch-action: none;
+    user-select: none;
+    max-width: 100vw;
+    max-height: 90vh;
+    /* -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-tap-highlight-color: transparent; */
+}
+
+.wrapper.lamp.active svg {
+    cursor: auto;
+}
+
+.wrapper.lamp>svg .draw-string {
+    transition: transform .3s ease-in;
+}
+
+.wrapper.lamp>svg:hover .draw-string {
+    transform: translateY(8px);
+}
+
+.wrapper.lamp.pulling>svg .draw-string{
+    transform: translateY(16px);
+}
+
+.wrapper.lamp.active>svg:hover .draw-string {
+    animation: pulling .5s;
+}
+
+@keyframes pulling {
+    0% {
+        transform: translateY(12px);
+    }
+
+    50% {
+        transform: translateY(16px);
+    }
+
+    90% {
+        transform: translateY(8px);
+    }
+}
+
+.wrapper.lamp.active #star-on {
+    display: block;
+}
+
+.wrapper.lamp.active #star-off {
+    display: none;
+}
+
+.wrapper.lamp .target {
+    font-size: 2rem;
+    fill: #312783;
+    opacity: 0;
+}
+
+.wrapper.lamp.active .target {
+    transition: opacity 0.6s;
+    opacity: 1;
+}
+
+.wrapper.lamp .hint,
+.wrapper.lamp .result,
+.wrapper.lamp .result-2 {
+    z-index: 10;
+}
+
+.wrapper.lamp .hint,
+.wrapper.lamp .result {
+    position: absolute;
+    font-size: 2rem;
+}
+
+.wrapper.lamp .result.top {
+    top: 10%;
+    right: 60%;
+}
+
+.wrapper.lamp .result.bottom {
+    top: 60%;
+    left: 55%;
+}
+
+.wrapper.lamp .result {
+    opacity: 0;
+}
+
+.wrapper.lamp.active .result {
+    opacity: 1;
+}
+
+.wrapper.lamp .arrow {
+    fill: none;
+    stroke: #1D1D1B;
+    stroke-width: 2.5;
+    animation: arrow 3s infinite;
+}
+
+.wrapper.lamp .arrow.a1 {
+    animation-delay: -1s;
+}
+
+.wrapper.lamp .arrow.a2 {
+    animation-delay: -.5s;
+}
+
+.wrapper.lamp .arrow.a3 {
+    animation-delay: 0s;
+}
+
+.wrapper.lamp.active .arrow {
+    opacity: 0 !important;
+    display: none;
+}
+
+@keyframes arrow {
+    0% {
+        opacity: 0
+    }
+    40% {
+        opacity: .8
+    }
+    80% {
+        opacity: 0
+    }
+    100% {
+        opacity: 0
+    }
+}
+
+.wrapper.lamp .trees-left,
+.wrapper.lamp .trees-right {
+    position: absolute;
+    bottom: 0;
+    max-width: 30%;
+    max-width: 30vw;
+}
+
+.wrapper.lamp .trees-left {
+    left: 0;
+}
+
+.wrapper.lamp .trees-right {
+    right: 0;
+}
+
+*:focus {
+    outline: none;
 }
